--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "start": "nodemon server/index.js",
     "react-dev": "webpack -d --watch",
     "react-prod": "webpack -p --watch",
-    "seed": "node seed.js",
+    "seed": "node ./db/seed.js",
     "test": "./node_modules/.bin/jest test"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cassandra-driver": "^4.5.0",
     "express": "^4.15.0",
     "faker": "^4.1.0",
+    "fs": "0.0.1-security",
+    "hoist-non-react-statics": "^3.3.2",
     "jquery": "^3.1.1",
     "moment": "^2.24.0",
     "mysql": "^2.13.0",
@@ -33,8 +36,9 @@
     "nodemon": "^1.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-is": "^16.13.1",
     "sequelize": "^5.8.6",
-    "styled-components": "^3.4.10"
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
