--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test": "./node_modules/.bin/jest test"
   },
   "dependencies": {
+    "arangojs": "^5.8.0",
     "body-parser": "^1.19.0",
     "cassandra-driver": "^4.5.0",
     "express": "^4.15.0",
