--- a/package.json
+++ b/package.json
@@ -31,10 +31,14 @@
     "fs": "0.0.1-security",
     "hoist-non-react-statics": "^3.3.2",
     "jquery": "^3.1.1",
+    "k6": "0.0.0",
     "moment": "^2.24.0",
     "mysql": "^2.13.0",
     "mysql2": "^1.6.5",
+    "newrelic": "^6.5.0",
     "nodemon": "^1.19.0",
+    "pg": "^8.0.2",
+    "postgresql": "0.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-is": "^16.13.1",
