Unbreak front-end after trying to refactor front-end

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mysql2": "^1.6.5",
     "newrelic": "^6.5.0",
     "nodemon": "^1.19.0",
+    "path": "^0.12.7",
     "pg": "^8.0.2",
     "postgresql": "0.0.1",
     "react": "^16.8.6",
