--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "arangojs": "^5.8.0",
     "body-parser": "^1.19.0",
     "cassandra-driver": "^4.5.0",
+    "cors": "^2.8.5",
     "express": "^4.15.0",
     "faker": "^4.1.0",
     "fs": "0.0.1-security",
@@ -43,6 +44,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-is": "^16.13.1",
+    "request": "^2.88.2",
     "sequelize": "^5.8.6",
     "styled-components": "^5.0.1"
   },
